<resources>
    <string name="app_name">Dekut Sales</string>
    <string name="logo">logo</string>
    <string name="dekut_sales">dekut sales</string>
    <string name="sign_up">sign up</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="or_continue_with_google">or continue with google</string>
    <string name="logout">Logout</string>
    <string name="your_dp">your dp</string>
    <string name="show_password">Show Password</string>
    <string name="sign_Up_to_continue">Register to continue</string>
    <string name="name">Name</string>
    <string name="your_name">Your Name…</string>
    <string name="emailhint">Email…</string>
    <string name="passwordH">Password…</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_a_account_sign_in">Already Have a Account? Login</string>
    <string name="welcome_to_dekut_sales">welcome to dekut sales</string>
    <string name="user_with_that_email_exists">user with that email exists</string>
    <string name="forget_password">Forget Password?</string>
    <string name="login">Login</string>
    <string name="need_new_account_sign_up_here">Need new Account? Register Here</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="if_you_dont_receive_reset_email_consider_checking_the_spam">If you dont receive reset email, consider checking the spam</string>
    <string name="a_user_with_that_email_already_exists">A user with that email already exists</string>
    <string name="agree_to_our">I Agree to the</string>
    <string name="terms_and_conditions"><u> terms and conditions </u> </string>
    <string name="home">Home</string>
    <string name="users">Users</string>
    <string name="add_blogs">Add Blogs</string>
    <string name="chatlist">ChatList</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo2">logo</string>
    <string name="edit_profile_data">Edit Profile Data</string>
    <string name="update_profile_pic">Update Profile Pic</string>
    <string name="update_name">Update Name</string>
    <string name="change_password">Change Password</string>
    <string name="update_password">Update Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="enter_description">Enter Description</string>
    <string name="enter_title">Enter Title</string>
    <string name="upload">Upload</string>
    <string name="_33_min">33 min</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="_1_2k_likes">1.2K Likes</string>
    <string name="_1_2k_comment">1.2K Comment</string>
    <string name="like">Like</string>
    <string name="comment">COMMENT</string>
    <string name="avatar">avatar</string>
    <string name="more">more</string>
    <string name="post">post</string>
    <string name="getting_posts">Getting posts</string>
    <string name="search">Search</string>
    <string name="logoutl">Logout</string>
    <string name="person_name">Person NAme</string>
    <string name="person_email">Person Email</string>
    <string name="anni">Anni</string>
    <string name="actual_comment">Actual Comment</string>
    <string name="_12_06_23">12/06/23</string>
    <string name="comments">Comments</string>
    <string name="enter_comment">Enter Comment...</string>

</resources>