<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp"
    tools:context=".signup">


    <ScrollView android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient">
        <LinearLayout
            android:padding="16dp"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_gravity="center_horizontal"
                android:layout_width="70dp"
                android:layout_height="70dp"
                app:srcCompat="@drawable/ds_logo"
                android:contentDescription="@string/logo" />

            <TextView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:gravity="center_horizontal"
                android:text="@string/welcome_to_dekut_sales"/>


            <TextView
                android:id="@+id/textView23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:gravity="center_horizontal"
                android:paddingTop="15dp"
                android:text="@string/sign_Up_to_continue" />

                <TextView
                    android:id="@+id/names"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/name"/>

                <EditText
                    android:id="@+id/register_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="30dp"
                    android:background="#B22196F3"
                    android:hint="@string/your_name"
                    android:inputType="text"
                    android:padding="8dp" />

                <TextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/email"/>

                <EditText
                    android:id="@+id/register_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="30dp"
                    android:background="#B22196F3"
                    android:hint="@string/emailhint"
                    android:inputType="textEmailAddress"
                    android:padding="8dp" />

                <TextView
                    android:id="@+id/pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/password" />

                <EditText
                    android:id="@+id/register_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="30dp"
                    android:background="#B22196F3"
                    android:hint="@string/passwordH"
                    android:inputType="textPassword"
                    android:padding="8dp" />


                <Button
                    android:id="@+id/register_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="30dp"
                    android:padding="4dp"
                    android:text="@string/create_account"
                    android:textAllCaps="false"
                    android:backgroundTint="#44608E"
                    android:textColor="@android:color/background_light"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/homepage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="23dp"
                    android:text="@string/already_have_a_account_sign_in"
                    android:textAlignment="center"
                    android:textSize="17sp"
                    android:textStyle="bold" />


        </LinearLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>
