<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp"
    tools:context=".MainActivity">

    <ScrollView android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/imageView"
                android:layout_gravity="center_horizontal"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:srcCompat="@drawable/ds_logo"
                android:contentDescription="@string/logo" />

            <TextView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:gravity="center_horizontal"
                android:text="@string/dekut_sales" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:gravity="center_horizontal"
                android:paddingTop="15dp"
                android:text="@string/sign_up" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"/>

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:ems="10"
                android:background="#952196F3"
                android:hint="@string/email"
                android:textColorHint="#6B000000"
                android:inputType="textEmailAddress"
                android:autofillHints="" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"/>

            <EditText
                android:background="#8F2196F3"
                android:hint="@string/password"
                android:textColorHint="#6B000000"
                android:padding="12dp"
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:autofillHints="" />
            <CheckBox
                android:id="@+id/show_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
            android:text="@string/show_password" />

            <Button
                android:id="@+id/signup_button"
                android:layout_width="wrap_content"
                android:padding="15dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#2196F3"
                android:text="@string/sign_up" />



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="15dp"
                android:text="@string/or_continue_with_google"/>

            <com.google.android.gms.common.SignInButton
                android:id="@+id/google_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_gravity="center_horizontal"
                 />

        </LinearLayout>


    </ScrollView>





</androidx.constraintlayout.widget.ConstraintLayout>
