<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="1dp"
    android:orientation="vertical"
    app:contentPadding="2dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/loadcomment"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="5dp"
            android:src="@drawable/ic_account" />

        <TextView
            android:id="@+id/commentname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/loadcomment"
            android:text="@string/anni"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/commenttext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/commentname"
            android:layout_toEndOf="@id/loadcomment"
            android:text="@string/actual_comment" />

        <TextView
            android:id="@+id/commenttime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/commenttext"
            android:layout_toEndOf="@id/loadcomment"
            android:text="@string/_12_06_23" />
    </RelativeLayout>

</androidx.cardview.widget.CardView>
