<?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragments.AddFragment">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/ptitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#4D2196F3"
                android:hint="@string/enter_title"
                android:minHeight="80dp"
                android:padding="10dp"
                android:singleLine="true" />

            <ImageView
                android:id="@+id/imagep"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="15dp"
                android:background="#6D2196F3"
                android:src="@drawable/ds_logo" />

            <EditText
                android:id="@+id/pdes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="#402196F3"
                android:gravity="start"
                android:hint="@string/enter_description"
                android:inputType="textCapSentences|textMultiLine"
                android:minHeight="120dp"
                android:padding="10dp"
                android:singleLine="true" />

            <Button
                android:id="@+id/pupload"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:text="@string/upload"
                android:textAlignment="center" />
        </LinearLayout>

    </ScrollView>
