<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostDetailsActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/commentsa">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:cardCornerRadius="3dp"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true"
                app:contentPadding="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/profilelayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/pictureco"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ic_account" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/unameco"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/name"
                                android:textSize="20sp" />

                            <TextView
                                android:id="@+id/utimeco"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/_33_min" />

                        </LinearLayout>

                        <ImageButton
                            android:id="@+id/morebtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:src="@drawable/ic_more" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/ptitleco"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/descriptco"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/description" />

                    <ImageView
                        android:id="@+id/pimagetvco"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">


                        <TextView
                            android:id="@+id/plikebco"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/_1_2k_likes"
                            android:textColor="@color/teal_700" />

                        <TextView
                            android:id="@+id/pcommenttv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/_1_2k_comment"
                            android:textAlignment="textEnd"
                            android:textColor="@color/teal_700" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#F5F0F0" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/like"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:autoLink="all"
                            android:backgroundTint="@color/teal_700"
                            android:drawableStart="@drawable/ic_like"
                            android:padding="5dp"
                            android:text="@string/like" />

                        <Button
                            android:id="@+id/share"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:backgroundTint="@color/teal_700"
                            android:drawableStart="@drawable/ic_share"
                            android:drawableLeft="@drawable/ic_share"
                            android:padding="5dp"
                            android:text="SHARE" />
                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_commenting"
                android:drawableLeft="@drawable/ic_commenting"
                android:drawablePadding="5dp"
                android:padding="2dp"
                android:text="@string/comments" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclecomment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <RelativeLayout
        android:id="@+id/commentsa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <ImageView
            android:id="@+id/commentimge"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_account" />

        <EditText
            android:id="@+id/typecommet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/sendcomment"
            android:layout_toEndOf="@id/commentimge"
            android:hint="@string/enter_comment"
            android:inputType="textCapSentences|textMultiLine"
            android:padding="15dp" />

        <ImageButton
            android:id="@+id/sendcomment"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_send_message" />

    </RelativeLayout>

</RelativeLayout>
